--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
-    <link rel="stylesheet" href="../css/style.css">
+    
     <title>Document</title>
 </head>
 
@@ -85,7 +86,8 @@
                     <div class="card product">
                         <img class="card-img-top" src="/assets/product-1-370x337.jpg" alt="Card image cap">
                         <div class="card-body">
-                            <h4 class="card-title">Card title</h4>
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text price">500.000 VNĐ</p>
                         </div>
                     </div>
                 </div>
@@ -93,7 +95,8 @@
                     <div class="card product">
                         <img class="card-img-top" src="/assets/product-1-370x337.jpg" alt="Card image cap">
                         <div class="card-body">
-                            <h4 class="card-title">Card title</h4>
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text price">500.000 VNĐ</p>
                         </div>
                     </div>
                 </div>
@@ -101,7 +104,8 @@
                     <div class="card product">
                         <img class="card-img-top" src="/assets/product-1-370x337.jpg" alt="Card image cap">
                         <div class="card-body">
-                            <h4 class="card-title">Card title</h4>
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text price">500.000 VNĐ</p>
                         </div>
                     </div>
                 </div>
@@ -109,7 +113,8 @@
                     <div class="card product">
                         <img class="card-img-top" src="/assets/product-1-370x337.jpg" alt="Card image cap">
                         <div class="card-body">
-                            <h4 class="card-title">Card title</h4>
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text price">500.000 VNĐ</p>
                         </div>
                     </div>
                 </div>
