--- a/src/index.html
+++ b/src/index.html
@@ -5,44 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../css/style.css">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
-    
+    <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex flex-column align-content-start">
-                    <div w-100>
-                        <a class="navbar-brand" href="#"><img src="../assets/logo-fts.png" alt=""></a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                    </div>
-
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav mr-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#">Trang Chủ <span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Giới Thiệu</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Liên Hệ</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-
+    <div class="container-fluid p-0">
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="#">
+                <i class="fas fa-book-reader fa-3x mx-3"></i>
+                THE BRICK</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="mr-auto"></div>
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Trang Chủ <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Course</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <div class="dropdown">
+                            <a class="nav-link" href="#">Pages</a>
+                            <div class="dropdown-content">
+                                <a href="#">Generic</a>
+                                <a href="#">Element</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Giỏ Hàng <i class="fas fa-shopping-cart"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Giới Thiệu</a>
+                    </li>
+                </ul>
             </div>
-        </div>
+        </nav>
     </div>
 
     <div class="container banner">
@@ -61,6 +68,19 @@
         </div>
     </div>
 
+    <div class="container-fluid mt-2">
+        <div class="row">
+            <div class="col-12">
+                <form action="">
+                    <div class="form-group">
+                        <input type="text" class="mr-2" name="" id="" placeholder="Tìm kiếm">
+                        <button class="btn btn-primary"><i class="fas fa-search"></i></button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
     <div class="main">
         <div class="container-fluid">
             <div class="row">
@@ -68,7 +88,7 @@
                     <p>Có tất cả 5 sản phẩm</p>
                 </div>
                 <div class="col-12 col-md-6">
-                    <div class="dropdown">
+                    <div class="dropdown sort">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Sắp xếp
