--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,10 @@
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="card product">
-                        <img class="card-img-top" src="/assets/product-1-370x337.jpg" alt="Card image cap">
+                        <div class="product-img">
+                            <img class="card-img-top" src="/assets/product-1-370x337.jpg" alt="Card image cap">
+                            <button class="btn btn-primary btn-lg btn-detail">Xem Thêm</button>
+                        </div>
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text price">500.000 VNĐ</p>
