--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container-fluid p-0">
+    <div class="menu container-fluid p-0">
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="#">
                 <i class="fas fa-book-reader fa-3x mx-3"></i>
@@ -104,7 +104,10 @@
             <div class="row products">
                 <div class="col-12 col-md-4">
                     <div class="card product">
-                        <img class="card-img-top" src="/assets/product-1-370x337.jpg" alt="Card image cap">
+                        <div class="product-img">
+                            <img class="card-img-top" src="/assets/product-1-370x337.jpg" alt="Card image cap">
+                            <button class="btn btn-primary btn-lg btn-detail">Xem Thêm</button>
+                        </div>
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text price">500.000 VNĐ</p>
@@ -125,7 +128,10 @@
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="card product">
-                        <img class="card-img-top" src="/assets/product-1-370x337.jpg" alt="Card image cap">
+                        <div class="product-img">
+                            <img class="card-img-top" src="/assets/product-1-370x337.jpg" alt="Card image cap">
+                            <button class="btn btn-primary btn-lg btn-detail">Xem Thêm</button>
+                        </div>
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text price">500.000 VNĐ</p>
@@ -134,7 +140,10 @@
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="card product">
-                        <img class="card-img-top" src="/assets/product-1-370x337.jpg" alt="Card image cap">
+                        <div class="product-img">
+                            <img class="card-img-top" src="/assets/product-1-370x337.jpg" alt="Card image cap">
+                            <button class="btn btn-primary btn-lg btn-detail">Xem Thêm</button>
+                        </div>
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text price">500.000 VNĐ</p>
