--- a/src/product.html
+++ b/src/product.html
@@ -15,14 +15,40 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-4">
-                <div class="box">
-                    <div class="box-img">
-                        <img src="../assets/product-1-370x337.jpg" alt="" class="img">
-                    </div>
-                    <h6 class="name">asdsadadsa</h6>
-                </div>
+            <div class="col-12 col-md-6">
+                <h1>MAIN OFFICE</h1>
+                <p>Aliquam tempus bibendum tortor sit amet tristique. Pellentesque sed augue sit amet ipsum imperdiet
+                    commodo ac quis orci. Nullam rhoncus augue ut mauris .
+                </p>
+                <p><i class="fas fa-phone-alt"></i><span> 0979 790 046</span></p>
+                <p><i class="fas fa-map-marker-alt"></i><span> 37/5 Bế Văn Cấm - P. Tân Kiểng - Quận 7 - TP. Hồ
+                        Chí Minh</span></p>
+                <p><i class="fas fa-envelope"></i><span> nippontile@gmail.com</span></p>
             </div>
+
+            <div class="col-12 col-md-6">
+                <form>
+                    <h1>Get In Touch</h1>
+                    <p>We are always here for you! 24/7 Support</p>
+                    <div class="form-group">
+                        <label for="formGroupExampleInput">Fields marked with an * are required</label>
+                        <input type="text" class="form-control empty" id="formGroupExampleInput"
+                            placeholder="Your Name">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control empty" id="formGroupExampleInput2"
+                            placeholder="Your Email">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control empty" id="formGroupExampleInput2"
+                            placeholder="Message">
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12"></div>
         </div>
     </div>
 
